--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "portfolio-backend",
+  "name": "portfolio-frontend",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "sqlite": "^4.1.2",
-    "sqlite3": "^5.1.6"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "vite": "^5.0.0"
   }
 }
